# fastapi

./: README.md  pyproject.toml  requirements.txt
src/digi_ad/: chat_bot.py  chat_database.py  main.py  requirements.txt
src/digi_ad/crews/digi_crew/: digi_crew.py
src/digi_ad/crews/digi_crew/config/: agents.yaml  tasks.yaml
src/digi_ad/tools/: custom_tool.py
src/digi_ad/tools/vectorstore/: index.faiss  index.pkl
