[project]
name = "digi_ad"
version = "0.1.0"
description = "digi-ad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==0.118.0",
    "langchain_cohere",
    "langchain",
]

[project.scripts]
kickoff = "digi_ad.main:kickoff"
run_crew = "digi_ad.main:kickoff"
plot = "digi_ad.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
